# datahub-k8s-operator

./: .gitignore  .licenserc.yaml  .woke.yaml  CONTRIBUTING.md  Makefile  README.md  charmcraft.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: .copilot-collections.yaml
.github/workflows/: integration_test.yaml  promote_charm.yaml  publish_charm.yaml  test.yaml  test_terraform_modules.yaml
datahub_rocks/actions/: rockcraft.yaml
datahub_rocks/actions/files/: executor.yaml
datahub_rocks/frontend/: rockcraft.yaml
datahub_rocks/frontend/files/: start.sh
datahub_rocks/gms/: rockcraft.yaml
datahub_rocks/gms/files/: create-indices.sh  init-truststore.sh  init.sh  runner.sh  start.sh
datahub_rocks/shared/scripts/: init-truststore.sh  runner.sh
scripts/: import_rock.sh
src/: applications.py  charm.py  exceptions.py  graphql.py  literals.py  log.py  services.py  structured_config.py  utils.py
src/files/: executor.yaml
src/grafana_dashboards/: datahub-monitoring.json.tmpl
src/prometheus_alert_rules/: datahub-monitoring.rules
src/relations/: kafka.py  oauth.py  opensearch.py  postgresql.py  trino.py
src/scripts/: create-indices.sh  generic-init.sh  init-truststore.sh  runner.sh
terraform/charm/: README.md  main.tf  outputs.tf  variables.tf
terraform/charm/tests/: main.tftest.hcl
terraform/charm/tests/setup/: main.tf
terraform/product/: README.md  locals.tf  main.tf  outputs.tf  terraform.tf  variables.tf
terraform/product/modules/dependencies/: main.tf  outputs.tf  terraform.tf  variables.tf
terraform/product/modules/kafka/: main.tf  outputs.tf  variables.tf
terraform/product/modules/oauth-external-idp-integrator/: main.tf  outputs.tf  variables.tf
terraform/product/modules/opensearch/: main.tf  outputs.tf  variables.tf
terraform/product/modules/postgresql/: main.tf  outputs.tf  variables.tf
terraform/product/modules/self-signed-certificates/: main.tf  outputs.tf  variables.tf
terraform/product/modules/traefik-k8s/: main.tf  outputs.tf  variables.tf
terraform/product/modules/zookeeper/: main.tf  outputs.tf  variables.tf
terraform/product/tests/: main.tftest.hcl
terraform/product/tests/setup/: main.tf  pre_run_script.sh
terraform/product/tests/wait_for_active/: main.tf  wait-for-active.sh
tests/: conftest.py
tests/integration/: conftest.py  helpers.py  test_charm.py  test_scaling.py  test_upgrade.py
tests/unit/: conftest.py  test_charm.py  test_relations.py  test_services.py  test_trino.py  test_utils.py
